[package]
name = "rust-grpc-server"
version = "0.1.0"
authors = ["Kenji Saito <ken-yo@mbr.nifty.com>"]
edition = "2018"
#build = "build.rs"

[dependencies]
grpcio = "~0.4"
grpcio-sys = "~0.4"
libc = "~0.2"
protobuf = "~2"
futures = "~0.1"
futures-cpupool = "~0.1"
prost = "~0.5"
bytes = "~0.4"
log = "~0.4"
env_logger = "~0.6"

diesel = { version = "^1.*", features = ["postgres", "uuid"] }
dotenv = "0.*"
uuid = { version = "^0.*", features = ["v4", "v5"] }

ctrlc = "~3.1"
