[package]
name = "rust-grpc-server"
version = "0.1.0"
authors = ["Kenji Saito <ken-yo@mbr.nifty.com>"]
edition = "2021"
#build = "build.rs"

[dependencies]
grpcio = { version = "*", default-features = false, features = ["protobuf-codec"] }
libc = "*"
protobuf = "*"
futures = "*"
futures-cpupool = "*"
prost = "*"
bytes = "*"
log = "*"
env_logger = "*"

diesel = { version = "*", features = ["postgres", "uuid"] }
dotenv = "*"
uuid = { version = "*", features = ["v4", "v5"] }

ctrlc = "*"
