[package]
name = "rust-grpc-server"
version = "0.1.0"
authors = ["Kenji Saito <ken-yo@mbr.nifty.com>"]
edition = "2021"

[dependencies]
grpcio = { version = "*", default-features = true, features = ["protobuf-codec","boringssl"] }
grpcio-sys = { version = "*", default-features = true }
libc = "*"
protobuf = "^3.0"
futures = "~0.3"
futures-cpupool = "~0.1"
futures-channel = { version = "~0.3", features = ["sink"] }
futures-executor = "~0.3"
futures-util = { version = "~0.3", features = ["sink"] }
futures-timer = "*"
prost = "*"
bytes = "*"
log = "*"
env_logger = "*"

diesel = { version = "*", features = ["postgres", "uuid"] }
dotenv = "*"
uuid = { version = "*", features = ["v4", "v5"] }

ctrlc = "*"
