[package]
name = "rust-grpc-server"
version = "0.0.0"
authors = ["Kenji Saito <ken-yo@mbr.nifty.com>"]
edition = "2021"

[dependencies]
tonic = "*"
tonic-web = "*"
futures = "*"
tokio = { version = "*", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "*"
protobuf = "*"
prost = "*"
prost-types = "*"
rand = "*"

libc = "*"
bytes = "*"
log = "*"
env_logger = "*"

diesel = { version = "*", features = ["postgres", "uuid"] }
dotenv = "*"
uuid = { version = "*", features = ["v4", "v5"] }
ctrlc = "*"


[build-dependencies]
tonic-build = "*"