[package]
name = "rust-api-server"
version = "0.0.1"
authors = ["Kenji Saito <ken-yo@mbr.nifty.com>"]
edition = "2021"
publish = false
build = "build.rs"


[lib]
path = "src/lib.rs"


[dependencies]
grpcio = { version = "*", default-features = true, features = ["protobuf-codec","boringssl"] }
grpcio-sys = { version = "*", default-features = true }
libc = "*"
protobuf = "^3.1"
futures = "~0.3"
futures-cpupool = "~0.1"
futures-channel = { version = "~0.3", features = ["sink"] }
futures-executor = "~0.3"
futures-util = { version = "~0.3", features = ["sink"] }
futures-timer = "*"
prost = "*"
bytes = "*"
log = "*"
env_logger = "*"
ctrlc = "*"
actix-web = "*"
actix-rt = "*"
openssl = "*"
openssl-sys = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
tokio-compat = "*"
uninit = { version = "*", default-features = false }

[build-dependencies]
protoc-grpcio = "*"
